<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/teal"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo"
                android:id="@+id/test_name"
                android:hint="@string/full_name"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="casual"
                android:layout_marginBottom="5dp"
                android:id="@+id/test_username"
                android:hint="@string/username"
                android:textStyle="bold"
                android:textSize="18sp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_test"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            android:clickable="false"
            app:hintTextColor="@color/teal"
            android:textColorHint="@color/teal"
            app:boxStrokeColor="@color/teal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/teal"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="10dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_test"
            app:hintTextColor="@color/teal"
            android:textColorHint="@color/teal"
            app:boxStrokeColor="@color/teal"
            android:hint="@string/full_name"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:textColor="@color/teal"
                android:drawablePadding="10dp"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_test"
            app:hintTextColor="@color/teal"
            android:textColorHint="@color/teal"
            app:boxStrokeColor="@color/teal"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:textColor="@color/teal"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber_test"
            app:hintTextColor="@color/teal"
            android:textColorHint="@color/teal"
            app:boxStrokeColor="@color/teal"
            android:hint="@string/phonenumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:textColor="@color/teal"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_btn_test"
        android:textColor="@color/white"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:text="@string/update_details"
        android:textStyle="bold"/>


</LinearLayout>